@@ -31,14 +31,14 @@
   (fsvn-process-environment
    (let ((real-args (fsvn-flatten-command-args args)))
      (fsvn-debug real-args)
-     (apply 'start-process "fsvn admin" buffer fsvn-svnadmin-command subcommand real-args))))
+     (apply 'start-process "fsvn admin" buffer fsvn-svnadmin-command-internal subcommand real-args))))
 
 (defun fsvn-admin-call-command (subcommand buffer &rest args)
   (fsvn-process-environment
    (let ((real-args (fsvn-flatten-command-args args)))
      (fsvn-debug real-args)
      (prog1
-	 (apply 'call-process fsvn-svnadmin-command nil buffer nil subcommand real-args)
+	 (apply 'call-process fsvn-svnadmin-command-internal nil buffer nil subcommand real-args)
        (fsvn-debug buffer)))))
 
 (defun fsvn-admin-create-repository (dir &optional args)
